<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="TcoInsightIO_v_5_x_x" Id="{34c37973-daf3-01a0-1ad4-0e77387adf4e}">
    <Declaration><![CDATA[TYPE TcoInsightIO_v_5_x_x :
STRUCT
    PnIoBoxState AT %I* : UINT;
    PnIoBoxDiag AT %I* : UINT;
    PnIoBoxCtrl AT %Q* : UINT;
    AcquisitionControl : TcoInsightAcquisitionControl_v_5_x_x;
    AcquisitionStatus : TcoInsightAcquisitionStatus_v_5_x_x;
    InspectionControl : TcoInsightInspectionControl_v_5_x_x;
    InspectionStatus : TcoInsightInspectionStatus_v_5_x_x;
    CommandControl : TcoInsightCommandControl_v_5_x_x;
    SoftEventControl : TcoInsightSoftEventControl_v_5_x_x;
    UserData : TcoInsightUserData_v_5_x_x;
    ResultsData : TcoInsightResultData_v_5_x_x;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>